fixed wrapping bugs

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 *{
-    margin: 10;
-    padding: 10;
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
@@ -108,11 +108,6 @@ nav ul li a:hover::after{
     flex-basis: 60%;
 }
 
-.sub-title{
-    font-size: 60px;
-    font-weight: 600;
-    color: #fff;
-}
 .tab-titles{
     display: flex;
     margin: 20px 0 40px;
